--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -19,7 +19,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  graphql_flutter: ^0.9.5
+  sqflite: any
+  path_provider: ">=0.3.0"
 
 dev_dependencies:
   flutter_test:
